# Porygon

./: .gitignore  README.md  agent.py  main.py  providers.py  pyproject.toml  test_evals.py  test_providers.py  test_tools.py  tools.py
evals/: run_evals.py  tasks.jsonl
memory/: example.md
